deploy/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: go-hello
  namespace: go-hello
spec:
  rules:
    - host: go-hello.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: go-hello
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - go-hello.int.kyledev.co
      secretName: wildcard-kyledev-tls-prod
